# htmlxlsx

./: .gitignore  LICENSE  README.md  pyproject.toml
src/htmlexcel/: __main__.py
src/htmlexcel/utils/: excelwriter.py  htmlreader.py  interactionfile.py
src/htmlexcel/utils/molecule/: atom.py  interaction.py
